--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,7 +22,21 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "interfaces/*": [
+        "src/app/interfaces/*"
+      ],
+      "models/*": [
+        "src/app/models/*"
+      ],
+      "services/*": [
+        "src/app/services/*"
+      ],
+      "components/*": [
+        "src/app/components/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
