--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple web application for a recipe book",
   "main": "index.js",
   "scripts": {
+    "prestart": "npm install",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
